--- a/styles/index.css
+++ b/styles/index.css
@@ -57,7 +57,7 @@
   background-color: #f5f5f5;
   height: 82.3%;
   overflow-y: auto;
-  overflow-x: hidden;
+  word-wrap: break-word;
 }
 
 #msgform {
@@ -107,6 +107,8 @@ span {
 .msg-my {
   list-style-type: none;
   text-align: right;
+  
+ 
 }
 
 .msg-my span {
@@ -208,3 +210,5 @@ span {
 #logout{
   color: gray;
 }
+
+
